# kodixbttool

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.de.md  README.md  getopt_win.c  getopt_win.h  kodixbttool.code-workspace  main.cpp  platform.h  platform_win.c  skin_unused.cpp  skin_unused.h  test.sh  xbtf.cpp  xbtf.h  xbtf_pack.cpp  xbtf_pack.h
.github/: MAINTAINING.md
.github/scripts/: release.sh
.github/workflows/: build-release.yml
cmake/: FindLZO.cmake  Findlibsquish.cmake
